client/ci/kube/admin.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: admin
  labels:
    app: admin
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - image: eu.gcr.io/applica-cov-id/hsc-admin:1.0.1
          name: admin
          ports:
            - containerPort: 80
              name: admin

          livenessProbe:
            httpGet:
              path: /
              port: admin
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: admin
            initialDelaySeconds: 30
            periodSeconds: 30
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: admin
  name: admin
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: admin
