client/ci/kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hsc-ingress
  annotations:
    ingress.kubernetes.io/add-base-url: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: admin
    servicePort: 80
  rules:
  - host:
    http:
      paths:
      - path: /api/*
        backend:
          serviceName: api
          servicePort: 8080
      - path: /publisher/*
        backend:
          serviceName: publisher
          servicePort: 8080
      - path: /*
        backend:
          serviceName: admin
          servicePort: 80
